@@ -20,10 +20,7 @@ public class Deck {
         if (cards.isEmpty()) {
             throw new IllegalStateException("덱에 카드가 없습니다.");
         }
-        return cards.remove(cards.size() - 1);
+        return cards.removeLast();
     }
 
-    public int size() {
-        return cards.size();
-    }
 }
